--- a/lamparas_test3/index.html
+++ b/lamparas_test3/index.html
@@ -30,7 +30,7 @@
         <script src="js/rbush.min.js"></script>
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
-        <script src="data/Tipo_0.js"></script>
+        <script src="data/Barriosvolnerablesportipo_0.js"></script>
         <script src="data/Recambiodeluminarias_1.js"></script>
         <script>
         var highlightLayer;
@@ -64,7 +64,7 @@
                 map.fitBounds(bounds_group.getBounds());
             }
         }
-        function pop_Tipo_0(feature, layer) {
+        function pop_Barriosvolnerablesportipo_0(feature, layer) {
             layer.on({
                 mouseout: function(e) {
                     for (i in e.target._eventParents) {
@@ -81,10 +81,6 @@
                     <tr>\
                         <th scope="row">Identificador</th>\
                         <td>' + (feature.properties['IDENTIFICA'] !== null ? Autolinker.link(String(feature.properties['IDENTIFICA'])) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Descripción</th>\
-                        <td>' + (feature.properties['FNA'] !== null ? Autolinker.link(String(feature.properties['FNA'])) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <th scope="row">Comuna</th>\
@@ -102,11 +98,11 @@
             layer.bindPopup(popupContent, {maxHeight: 400});
         }
 
-        function style_Tipo_0_0(feature) {
+        function style_Barriosvolnerablesportipo_0_0(feature) {
             switch(String(feature.properties['TIPO1'])) {
                 case 'Asentamiento':
                     return {
-                pane: 'pane_Tipo_0',
+                pane: 'pane_Barriosvolnerablesportipo_0',
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
@@ -120,7 +116,7 @@
                     break;
                 case 'NHT':
                     return {
-                pane: 'pane_Tipo_0',
+                pane: 'pane_Barriosvolnerablesportipo_0',
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
@@ -134,7 +130,7 @@
                     break;
                 case 'Urbanización':
                     return {
-                pane: 'pane_Tipo_0',
+                pane: 'pane_Barriosvolnerablesportipo_0',
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
@@ -148,7 +144,7 @@
                     break;
                 case 'Villa':
                     return {
-                pane: 'pane_Tipo_0',
+                pane: 'pane_Barriosvolnerablesportipo_0',
                 opacity: 1,
                 color: 'rgba(0,0,0,1.0)',
                 dashArray: '',
@@ -162,17 +158,17 @@
                     break;
             }
         }
-        map.createPane('pane_Tipo_0');
-        map.getPane('pane_Tipo_0').style.zIndex = 400;
-        map.getPane('pane_Tipo_0').style['mix-blend-mode'] = 'normal';
-        var layer_Tipo_0 = new L.geoJson(json_Tipo_0, {
+        map.createPane('pane_Barriosvolnerablesportipo_0');
+        map.getPane('pane_Barriosvolnerablesportipo_0').style.zIndex = 400;
+        map.getPane('pane_Barriosvolnerablesportipo_0').style['mix-blend-mode'] = 'normal';
+        var layer_Barriosvolnerablesportipo_0 = new L.geoJson(json_Barriosvolnerablesportipo_0, {
             attribution: '<a href=""></a>',
-            pane: 'pane_Tipo_0',
-            onEachFeature: pop_Tipo_0,
-            style: style_Tipo_0_0,
+            pane: 'pane_Barriosvolnerablesportipo_0',
+            onEachFeature: pop_Barriosvolnerablesportipo_0,
+            style: style_Barriosvolnerablesportipo_0_0,
         });
-        bounds_group.addLayer(layer_Tipo_0);
-        map.addLayer(layer_Tipo_0);
+        bounds_group.addLayer(layer_Barriosvolnerablesportipo_0);
+        map.addLayer(layer_Barriosvolnerablesportipo_0);
         function pop_Recambiodeluminarias_1(feature, layer) {
             layer.on({
                 mouseout: function(e) {
@@ -190,10 +186,6 @@
                     <tr>\
                         <th scope="row">Identificador</th>\
                         <td>' + (feature.properties['IDENTIFICA'] !== null ? Autolinker.link(String(feature.properties['IDENTIFICA'])) : '') + '</td>\
-                    </tr>\
-                    <tr>\
-                        <th scope="row">Descripción</th>\
-                        <td>' + (feature.properties['FNA'] !== null ? Autolinker.link(String(feature.properties['FNA'])) : '') + '</td>\
                     </tr>\
                     <tr>\
                         <th scope="row">Comuna</th>\
@@ -220,7 +212,7 @@
                         <td>' + (feature.properties['potA'] !== null ? Autolinker.link(String(feature.properties['potA'])) : '') + '</td>\
                     </tr>\
                     <tr>\
-                        <th scope="row">Recambio: Equivalent</th>\
+                        <th scope="row">Recambio: equivalent</th>\
                         <td>' + (feature.properties['equ_str'] !== null ? Autolinker.link(String(feature.properties['equ_str'])) : '') + '</td>\
                     </tr>\
                 </table>';
@@ -228,7 +220,7 @@
         }
 
         function style_Recambiodeluminarias_1_0(feature) {
-            if (feature.properties['q2wHide_cantd'] >= 0.000000 && feature.properties['q2wHide_cantd'] <= 600.000000 ) {
+            if (feature.properties['q2wHide_recambio_lamparas_Cantidadd'] >= 0.000000 && feature.properties['q2wHide_recambio_lamparas_Cantidadd'] <= 600.000000 ) {
                 return {
                 pane: 'pane_Recambiodeluminarias_1',
                 opacity: 1,
@@ -239,10 +231,66 @@
                 weight: 1.0, 
                 fill: true,
                 fillOpacity: 1,
-                fillColor: 'rgba(136,124,238,0.0)',
+                fillColor: 'rgba(19,16,0,0.0)',
             }
             }
-            if (feature.properties['q2wHide_cantd'] >= 600.000000 && feature.properties['q2wHide_cantd'] <= 2000.000000 ) {
+            if (feature.properties['q2wHide_recambio_lamparas_Cantidadd'] >= 600.000000 && feature.properties['q2wHide_recambio_lamparas_Cantidadd'] <= 2000.000000 ) {
+                return {
+                pane: 'pane_Recambiodeluminarias_1',
+                opacity: 1,
+                color: 'rgba(0,0,0,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(66,57,0,1.0)',
+            }
+            }
+            if (feature.properties['q2wHide_recambio_lamparas_Cantidadd'] >= 2000.000000 && feature.properties['q2wHide_recambio_lamparas_Cantidadd'] <= 2500.000000 ) {
+                return {
+                pane: 'pane_Recambiodeluminarias_1',
+                opacity: 1,
+                color: 'rgba(0,0,0,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(113,97,0,1.0)',
+            }
+            }
+            if (feature.properties['q2wHide_recambio_lamparas_Cantidadd'] >= 2500.000000 && feature.properties['q2wHide_recambio_lamparas_Cantidadd'] <= 5000.000000 ) {
+                return {
+                pane: 'pane_Recambiodeluminarias_1',
+                opacity: 1,
+                color: 'rgba(0,0,0,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(160,138,0,1.0)',
+            }
+            }
+            if (feature.properties['q2wHide_recambio_lamparas_Cantidadd'] >= 5000.000000 && feature.properties['q2wHide_recambio_lamparas_Cantidadd'] <= 7500.000000 ) {
+                return {
+                pane: 'pane_Recambiodeluminarias_1',
+                opacity: 1,
+                color: 'rgba(0,0,0,1.0)',
+                dashArray: '',
+                lineCap: 'butt',
+                lineJoin: 'miter',
+                weight: 1.0, 
+                fill: true,
+                fillOpacity: 1,
+                fillColor: 'rgba(207,179,0,1.0)',
+            }
+            }
+            if (feature.properties['q2wHide_recambio_lamparas_Cantidadd'] >= 7500.000000 && feature.properties['q2wHide_recambio_lamparas_Cantidadd'] <= 7911.000000 ) {
                 return {
                 pane: 'pane_Recambiodeluminarias_1',
                 opacity: 1,
@@ -254,62 +302,6 @@
                 fill: true,
                 fillOpacity: 1,
                 fillColor: 'rgba(254,220,0,1.0)',
-            }
-            }
-            if (feature.properties['q2wHide_cantd'] >= 2000.000000 && feature.properties['q2wHide_cantd'] <= 2500.000000 ) {
-                return {
-                pane: 'pane_Recambiodeluminarias_1',
-                opacity: 1,
-                color: 'rgba(0,0,0,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(196,169,0,1.0)',
-            }
-            }
-            if (feature.properties['q2wHide_cantd'] >= 2500.000000 && feature.properties['q2wHide_cantd'] <= 5000.000000 ) {
-                return {
-                pane: 'pane_Recambiodeluminarias_1',
-                opacity: 1,
-                color: 'rgba(0,0,0,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(137,118,0,1.0)',
-            }
-            }
-            if (feature.properties['q2wHide_cantd'] >= 5000.000000 && feature.properties['q2wHide_cantd'] <= 7500.000000 ) {
-                return {
-                pane: 'pane_Recambiodeluminarias_1',
-                opacity: 1,
-                color: 'rgba(0,0,0,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(78,67,0,1.0)',
-            }
-            }
-            if (feature.properties['q2wHide_cantd'] >= 7500.000000 && feature.properties['q2wHide_cantd'] <= 7911.000000 ) {
-                return {
-                pane: 'pane_Recambiodeluminarias_1',
-                opacity: 1,
-                color: 'rgba(0,0,0,1.0)',
-                dashArray: '',
-                lineCap: 'butt',
-                lineJoin: 'miter',
-                weight: 1.0, 
-                fill: true,
-                fillOpacity: 1,
-                fillColor: 'rgba(19,16,0,1.0)',
             }
             }
         }
@@ -324,7 +316,7 @@
         });
         bounds_group.addLayer(layer_Recambiodeluminarias_1);
         var baseMaps = {};
-        L.control.layers(baseMaps,{'Recambio de luminarias<br /><table><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_sinrecambio0.png" /></td><td>sin recambio</td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_hasta20001.png" /></td><td> hasta 2.000 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_200025002.png" /></td><td> 2.000 - 2.500 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_250050003.png" /></td><td> 2.500 - 5.000 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_500075004.png" /></td><td> 5.000 - 7.500 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_75005.png" /></td><td> 7.500+</td></tr></table>': layer_Recambiodeluminarias_1,'Tipo<br /><table><tr><td style="text-align: center;"><img src="legend/Tipo_0_Asentamiento0.png" /></td><td>Asentamiento</td></tr><tr><td style="text-align: center;"><img src="legend/Tipo_0_NHT1.png" /></td><td>NHT</td></tr><tr><td style="text-align: center;"><img src="legend/Tipo_0_Urbanizacin2.png" /></td><td>Urbanización</td></tr><tr><td style="text-align: center;"><img src="legend/Tipo_0_Villa3.png" /></td><td>Villa</td></tr></table>Fuente: Ministerio de Ambiente y Espacio Público<br>Agencia de Protección Ambiental (APrA)': layer_Tipo_0,},{collapsed:false}).addTo(map);
+        L.control.layers(baseMaps,{'Recambio de luminarias<br /><table><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_sinrecambio0.png" /></td><td>sin recambio</td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_hasta20001.png" /></td><td> hasta 2.000 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_200025002.png" /></td><td> 2.000 - 2.500 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_250050003.png" /></td><td> 2.500 - 5.000 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_500075004.png" /></td><td> 5.000 - 7.500 </td></tr><tr><td style="text-align: center;"><img src="legend/Recambiodeluminarias_1_75005.png" /></td><td> 7.500+</td></tr></table>': layer_Recambiodeluminarias_1,'Barrios volnerables por tipo<br /><table><tr><td style="text-align: center;"><img src="legend/Barriosvolnerablesportipo_0_Asentamiento0.png" /></td><td>Asentamiento</td></tr><tr><td style="text-align: center;"><img src="legend/Barriosvolnerablesportipo_0_NHT1.png" /></td><td>NHT</td></tr><tr><td style="text-align: center;"><img src="legend/Barriosvolnerablesportipo_0_Urbanizacin2.png" /></td><td>Urbanización</td></tr><tr><td style="text-align: center;"><img src="legend/Barriosvolnerablesportipo_0_Villa3.png" /></td><td>Villa</td></tr></table>Fuente: Ministerio de Ambiente y Espacio Público<br>Agencia de Protección Ambiental (APrA)': layer_Barriosvolnerablesportipo_0,},{collapsed:false}).addTo(map);
         setBounds();
 		L.control.scale({maxWidth:200,imperial:false}).addTo(map);		
 		L.Control.Watermark = L.Control.extend({
